--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,23 +9,19 @@ header {
 #signature {
 	width: 100%;
 	height: auto;
-	max-width: 1920px;
-	max-height: 1080px;
 }
 
 #hero {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 35px;
+	width: 100%;
+	height: 25%;
 	display: inline-block;
-	background-color: #3390FF;
+	background-color: #161616;
 	margin-top: 0px;
 }
 
 #about {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 35px;
+	width: 100%;
+	height: 25%;
 	display: inline-block;
 	background-color: #3390FF;
 	margin-top: 0px;
@@ -38,6 +34,12 @@ header {
 	width: 100%;
 	float: left;
 	margin-top: 15px;
-	margin-left: -15px; /* .about determines color square position */
 	letter-spacing: 4px;
+}
+
+.text_column {
+	text-align:justify;
+	/* margin-left: 15px; experiment with percentages*/
+	padding-right: 1rem;
+	padding-left: 1rem;
 }
