--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,10 @@
 /* Navigation */
+container {
+	width: 100%;
+	height: 100%;
+	background-color: #161616;
+}
+
 header {
 	width: 100%;
 	height: 5%;
